--- a/style.css
+++ b/style.css
@@ -72,4 +72,9 @@ span{
     color:var(--bg-color);
 }
 
+.btn:hover{
+    background-color: var(--hover-color);
+    color: var(--text-color);
+    font-weight: var(--regular);
+}
 
