Feat: solid border when the drag area is activated

--- a/style.css
+++ b/style.css
@@ -42,8 +42,12 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px dashed #fff;
     row-gap: 10px;
+    border: 2px dashed #fff;
+}
+
+.frame.active{
+    border: 2px solid #fff;
 }
 
 .cloud__icon{
