Style: image uploaded by the user

--- a/style.css
+++ b/style.css
@@ -82,3 +82,9 @@ span{
     font-weight: var(--regular);
 }
 
+img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
